# motives

./: .gitignore  README.md  pyproject.toml  requirements.txt
motives/: __init__.py  equations.py  expression_tree.py  free.py  grothGroupContext.py  integer.py  polynomial_1_var.py  utils.py  variable.py
motives/core/: __init__.py  expr.py  expression_tree.py  groth_ring_context.py  integer.py  lambda_context.py  lambda_ring_context.py  lambda_ring_expr.py  node.py  object_1_dim.py  operand.py  variable.py
motives/core/operand/: __init__.py  object_1_dim.py  operand.py  rational_operand.py
motives/core/operator/: __init__.py  general_operator.py  nary_operator.py  pow_operator.py  rational_operator.py  ring_operator.py  unary_operator.py
motives/grothendieck_motives/: __init__.py  lefschetz.py  motive.py  point.py  polynomial_1_var.py  proj.py  symbol.py
motives/grothendieck_motives/curves/: __init__,py  curve.py  curvechow.py  curvehodge.py  hodge.py  jacobian.py  piccard.py
motives/grothendieck_motives/curves/moduli_motives/: __init__.py  twisted_higgs_moduli.py
motives/grothendieck_motives/groups/: __init__.py  g.py  general_groups.py  gl.py  o.py  pgl.py  psl.py  pso.py  semisimple_g.py  sl.py  so.py  sp.py
motives/grothendieck_motives/moduli/scheme/: __init__.py  bundle_moduli.py  twisted_higgs_moduli.py  twisted_higgs_moduli_adhm.py  twisted_higgs_moduli_bb.py  vector_bundle_moduli.py  vhs.py
motives/grothendieck_motives/moduli/stack/: __init__.py  bg.py  bun.py  bundet.py  bung.py
motives/grothendieck_motives/moduli_motives/scheme/: TwistedHiggsModuliADHM.py  TwistedHiggsModuliBB.py  __init__.py  twisted_higgs_moduli.py  twisted_higgs_moduli_adhm.py
tests/: test_as_symbol.py  test_curve.py  test_gl.py  test_groth.py  test_groups.py  test_instantiate.py  test_integer.py  test_jac.py  test_mozgovoy_d.py  test_mozgovoy_m.py  test_no_exceptions.py  test_proj.py  test_sym_alt.py  test_vhs_vector_bundle.py
