[tool.poetry]
name = "motives"
version = "0.3.3"
description = "Software package that allows efficient manipulation and comparison of Grothendieck motives in lambda-rings."
authors = ["Daniel Sánchez Sánchez <danielsanchezs1905@gmail.com>", "David Alfaya Sánchez <dalfaya@icai.comillas.edu>", "Jaime Pizarroso <jpizarroso@comillas.edu>"]
readme = "README.md"
exclude = ["motives/equations.py"]

[tool.poetry.dependencies]
python = "^3.10.6"
sympy = "^1.12"
tqdm = "4.66.1"
typeguard = "4.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-randomly = "^3.15.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
